Best model on PCA

--- a/Hari_Krishna_TelecomChurnCaseStudy.ipynb
+++ b/Hari_Krishna_TelecomChurnCaseStudy.ipynb
@@ -23576,15 +23576,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conclusion: Although Accuracy and Sensitivity is almost same for all the 3 models . ROC score of Decision tree is less and Specificity of the logistic regression is more. Since Random forrest fulfills the gap of "
+    "### Conclusion-1: \n",
+    "Although Accuracy and Sensitivity is almost same for all the 3 models . ROC score of Decision tree and random forrest is less and Specificity of the logistic regression is more. \n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Model Recommendation with PCA for this Case study \n",
+    "\n",
+    "Logistic Regression > Random forrest > Decision tree"
+   ]
   },
   {
    "cell_type": "code",
