Final Model with PCA and model evaluation

--- a/Hari_Krishna_TelecomChurnCaseStudy.ipynb
+++ b/Hari_Krishna_TelecomChurnCaseStudy.ipynb
@@ -25970,6 +25970,481 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for train\n",
+    "y = telecom_churn_reduced_13_df.pop('churn')\n",
+    "X = telecom_churn_reduced_13_df\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, train_size=0.7,test_size=0.3,random_state=100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_train[Cont_variables] = scaler.fit_transform(X_train[Cont_variables])\n",
+    "X_test[Cont_variables] = scaler.transform(X_test[Cont_variables])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg = LogisticRegression(class_weight={0: 0.1, 1: 0.9})\n",
+    "from sklearn.feature_selection import RFE\n",
+    "rfe = RFE(logreg, 30)             # running RFE with 40 variables as output as PCA gave 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfe = rfe.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['onnet_mou_8', 'loc_og_t2m_mou_8', 'loc_og_t2c_mou_8',\n",
+       "       'std_og_t2m_mou_8', 'std_og_t2f_mou_8', 'spl_og_mou_8',\n",
+       "       'total_og_mou_8', 'loc_ic_t2f_mou_8', 'std_ic_t2m_mou_8',\n",
+       "       'std_ic_t2f_mou_8', 'total_ic_mou_8', 'ic_others_8', 'total_rech_num_8',\n",
+       "       'last_day_rch_amt_8', 'vol_2g_mb_8', 'sachet_2g_8',\n",
+       "       'Recharge_on_days_before_EOM_8', 'roam_ic_mou_good',\n",
+       "       'loc_og_t2f_mou_good', 'loc_og_mou_good', 'std_og_mou_good',\n",
+       "       'isd_og_mou_good', 'total_og_mou_good', 'std_ic_t2m_mou_good',\n",
+       "       'std_ic_t2f_mou_good', 'total_ic_mou_good', 'total_rech_num_good',\n",
+       "       'Recharge_on_days_before_EOM_good', 'Recharge_on_days_before_EOM_8_1',\n",
+       "       'Recharge_on_days_before_EOM_8_5'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col = X_train.columns[rfe.support_]\n",
+    "col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(class_weight={0: 0.1, 1: 0.9})"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg_rfe = LogisticRegression(class_weight={0: 0.1, 1: 0.9})\n",
+    "logreg_rfe.fit(X_train[col], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.9'"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_probs_test = logreg_rfe.predict_proba(X_test[col])[:,1]\n",
+    "\"{:2.2}\".format(metrics.roc_auc_score(y_test, pred_probs_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_default = logreg_rfe.predict(X_test[col])\n",
+    "Met_Log_rfe = confusion_matrix(y_test,y_pred_default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.8419550924202952\n",
+      "Sensitivity 0.8421124268408874\n",
+      "Specificity 0.8403361344537815\n",
+      "FPR 0.15788757315911256\n",
+      "FNR 0.15966386554621848\n"
+     ]
+    }
+   ],
+   "source": [
+    "Accuracy_rfe = accuracy_score(y_test,y_pred_default)\n",
+    "print(\"Accuracy\", Accuracy_rfe)\n",
+    "\n",
+    "Sensitivity_rfe =(Met_Log_rfe[0,0]/(Met_Log_rfe[0,0]+Met_Log_rfe[0,1]))\n",
+    "print(\"Sensitivity\", Sensitivity_rfe)\n",
+    "\n",
+    "Specificity_rfe = Met_Log_rfe[1,1]/(Met_Log_rfe[1,0]+Met_Log_rfe[1,1])\n",
+    "print(\"Specificity\", Specificity_rfe)\n",
+    "\n",
+    "FPR_rfe = Met_Log_rfe[0,1]/(Met_Log_rfe[0,0]+Met_Log_rfe[0,1])\n",
+    "print(\"FPR\", FPR_rfe)\n",
+    "\n",
+    "FNR_rfe = Met_Log_rfe[1,0]/(Met_Log_rfe[1,0]+Met_Log_rfe[1,1])\n",
+    "print(\"FNR\", FNR_rfe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Doing Random Forrest on all features without PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the parameter grid based on the results of random search \n",
+    "folds = 5\n",
+    "params = {\n",
+    "    'max_depth': [12,15],\n",
+    "    'min_samples_leaf': range(50, 200, 100),\n",
+    "    'min_samples_split': range(100, 500, 100),\n",
+    "    'n_estimators': range(50, 100, 10), \n",
+    "    'max_features': [10, 20, 30]\n",
+    "}\n",
+    "# Create a based model\n",
+    "rf_all = RandomForestClassifier(class_weight={0:0.1, 1:0.9})\n",
+    "\n",
+    "# Instantiate the grid search model\n",
+    "grid_rf_all = GridSearchCV(estimator = rf_all, param_grid = params,refit='recall_score' ,\n",
+    "                          cv = folds, n_jobs=-1, verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 240 candidates, totalling 1200 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   36.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:  2.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 442 tasks      | elapsed:  7.6min\n",
+      "[Parallel(n_jobs=-1)]: Done 792 tasks      | elapsed: 14.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 1200 out of 1200 | elapsed: 24.4min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=RandomForestClassifier(class_weight={0: 0.1, 1: 0.9}),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'max_depth': [12, 15], 'max_features': [10, 20, 30],\n",
+       "                         'min_samples_leaf': range(50, 200, 100),\n",
+       "                         'min_samples_split': range(100, 500, 100),\n",
+       "                         'n_estimators': range(50, 100, 10)},\n",
+       "             refit='recall_score', verbose=1)"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_rf_all.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(class_weight={0: 0.1, 1: 0.9}, max_depth=12,\n",
+       "                       max_features=30, min_samples_leaf=50,\n",
+       "                       min_samples_split=100, n_estimators=50)"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_rf_all.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9094968210209118"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_rf_all.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_all = RandomForestClassifier(class_weight={0: 0.1, 1: 0.9}, max_depth=12,\n",
+    "                       max_features=30, min_samples_leaf=50,\n",
+    "                       min_samples_split=100, n_estimators=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(class_weight={0: 0.1, 1: 0.9}, max_depth=12,\n",
+       "                       max_features=30, min_samples_leaf=50,\n",
+       "                       min_samples_split=100, n_estimators=50)"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_all.fit(X_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_rf_all = rf_all.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6784,  563],\n",
+       "       [ 167,  547]], dtype=int64)"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm_rf_all = metrics.confusion_matrix( y_test, y_pred_rf_all )\n",
+    "cm_rf_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy 0.9094405160650043\n",
+      "Sensitivity 0.9233700830270859\n",
+      "Specificity 0.7661064425770309\n",
+      "FPR 0.07662991697291412\n",
+      "FNR 0.2338935574229692\n"
+     ]
+    }
+   ],
+   "source": [
+    "Accuracy_rf_all = accuracy_score(y_test,y_pred_rf_all)\n",
+    "print(\"Accuracy\", Accuracy_rf_all)\n",
+    "\n",
+    "Sensitivity_rf_all =(cm_rf_all[0,0]/(cm_rf_all[0,0]+cm_rf_all[0,1]))\n",
+    "print(\"Sensitivity\", Sensitivity_rf_all)\n",
+    "\n",
+    "Specificity_rf_all = cm_rf_all[1,1]/(cm_rf_all[1,0]+cm_rf_all[1,1])\n",
+    "print(\"Specificity\", Specificity_rf_all)\n",
+    "\n",
+    "FPR_rf_all = cm_rf_all[0,1]/(cm_rf_all[0,0]+cm_rf_all[0,1])\n",
+    "print(\"FPR\", FPR_rf_all)\n",
+    "\n",
+    "FNR_rf_all = cm_rf_all[1,0]/(cm_rf_all[1,0]+cm_rf_all[1,1])\n",
+    "print(\"FNR\", FNR_rf_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion : Random forrest with test of recall_score worked better than all other models. Lets proceed for the feature determination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict\n",
+    "feature_attributes=list(X_train.columns.values)\n",
+    "features_dict = {}\n",
+    "for name, importance in zip(feature_attributes, rf_all.feature_importances_):\n",
+    "    features_dict[name]=importance\n",
+    "#Sorting Dictionary in descending order of the importance variable\n",
+    "features_descending = OrderedDict(sorted(features_dict.items(), \n",
+    "                                  key=lambda kv: kv[1], reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('loc_ic_mou_8', 0.09995726551596948),\n",
+       " ('loc_ic_t2m_mou_8', 0.06667118947127272),\n",
+       " ('loc_og_mou_8', 0.06268227357822893),\n",
+       " ('total_ic_mou_8', 0.04969179774545222),\n",
+       " ('last_day_rch_amt_8', 0.049164490361410136),\n",
+       " ('arpu_8', 0.04880223944627208),\n",
+       " ('roam_og_mou_8', 0.04785682773169838),\n",
+       " ('loc_og_t2t_mou_8', 0.047347014012524294),\n",
+       " ('total_og_mou_8', 0.04503011529680837),\n",
+       " ('loc_ic_t2t_mou_8', 0.038403783183833404),\n",
+       " ('roam_ic_mou_8', 0.03747841933925681),\n",
+       " ('total_rech_amt_8', 0.03633816138428888),\n",
+       " ('offnet_mou_8', 0.033389859804981575),\n",
+       " ('max_rech_amt_8', 0.03309427173415489),\n",
+       " ('Recharge_on_days_before_EOM_8', 0.027191769316235716),\n",
+       " ('loc_og_t2m_mou_8', 0.026517963620294103),\n",
+       " ('loc_ic_t2f_mou_8', 0.02478047439228723),\n",
+       " ('total_rech_num_8', 0.01771308862783563),\n",
+       " ('std_ic_mou_8', 0.013449678796476973),\n",
+       " ('std_og_mou_8', 0.011677115358302454),\n",
+       " ('onnet_mou_8', 0.010182663461496195),\n",
+       " ('loc_og_t2f_mou_8', 0.008717372973160914),\n",
+       " ('std_og_mou_good', 0.007183748897427935),\n",
+       " ('vol_3g_mb_8', 0.0068750917483978175),\n",
+       " ('std_og_t2t_mou_8', 0.005969080807588999),\n",
+       " ('loc_og_t2m_mou_good', 0.005396355912284855),\n",
+       " ('std_og_t2m_mou_8', 0.0053630205731585385),\n",
+       " ('std_og_t2m_mou_good', 0.005285865744937499),\n",
+       " ('aon', 0.005091051481582224),\n",
+       " ('vol_2g_mb_8', 0.004936224077104693)]"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Variable Importance top variables \n",
+    "dic= dict(features_descending)\n",
+    "\n",
+    "from itertools import islice\n",
+    "list(islice(dic.items(), 30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
